@@ -338,7 +338,7 @@ int CheckCdrom() {
 			Config.PsxType = 1; // pal
 		else Config.PsxType = 0; // ntsc
 	}
-	
+
 	if (CdromLabel[0] == ' ') {
 		strncpy(CdromLabel, CdromId, 9);
 	}
